<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@mipmap/login_bj"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/x75"
            android:layout_height="@dimen/x100"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@mipmap/login_head" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/y15"
            android:text="@string/login_title"
            android:textColor="@color/white"
            android:textSize="@dimen/x24" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/y25"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/activity_login_et_username"
                android:layout_width="@dimen/x200"
                android:layout_height="@dimen/y25"
                android:background="@drawable/edittext_selector"
                android:hint="@string/login_login_hint"
                android:paddingLeft="@dimen/x10"
                android:text="340103"
                android:textColor="@color/gray"
                android:textSize="@dimen/x14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/y20"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/activity_login_et_pwd"
                android:layout_width="@dimen/x200"
                android:layout_height="@dimen/y25"
                android:background="@drawable/edittext_selector"
                android:hint="@string/login_pwd_hint"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/x10"
                android:text="123456"
                android:textColor="@color/gray"
                android:textSize="@dimen/x14" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/activity_login_rg_roles"
            android:layout_width="@dimen/x200"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y10"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/activity_login_rb_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_rb_teacher"
                android:textColor="@color/white"
                android:textSize="@dimen/x12" />

            <!--<RadioButton-->
            <!--android:id="@+id/activity_login_rb_master"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="@dimen/x5"-->
            <!--android:text="@string/login_rb_master"-->
            <!--android:textColor="@color/white"-->
            <!--android:textSize="@dimen/x12" />-->

            <RadioButton
                android:id="@+id/activity_login_rb_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x5"
                android:text="@string/login_rb_admin"
                android:checked="true"
                android:textColor="@color/white"
                android:textSize="@dimen/x12" />
        </RadioGroup>

        <Button
            android:id="@+id/activity_login_btn_login"
            android:layout_width="@dimen/x200"
            android:layout_height="@dimen/y25"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/y10"
            android:background="@drawable/button_login_selector"
            android:text="@string/login_login"
            android:textColor="@color/white"
            android:textSize="@dimen/x18" />
    </LinearLayout>
</ScrollView>