<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/y3">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/y40"
        android:background="@color/title"
        android:gravity="center">

        <EditText
            android:id="@+id/activity_search_et_search"
            android:layout_width="@dimen/x150"
            android:layout_height="@dimen/y25"
            android:background="@drawable/edittext_selector"
            android:gravity="center"
            android:hint="@string/search_hint"
            android:textColor="@color/gray"
            android:textSize="@dimen/x14" />

        <Button
            android:id="@+id/activity_search_btn_search"
            android:layout_width="@dimen/x60"
            android:layout_height="@dimen/y24"
            android:layout_marginLeft="@dimen/x10"
            android:background="@drawable/button_login_selector"
            android:text="@string/search_search"
            android:textColor="@color/white"
            android:textSize="@dimen/x14" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/x10"
        android:background="@color/line" />

    <cn.app.peexam.view.NiceSpinner
        android:id="@+id/activity_search_ns_programs"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/y30"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:singleLine="true"
        android:textSize="@dimen/x18"
        app:backgroundSelector="@color/title"
        app:drawableHeight="@dimen/x20"
        app:drawableWidth="@dimen/x20"
        app:textTint="@color/white" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:id="@+id/activity_search_ll_save"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/y28"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/activity_search_btn_save"
                android:layout_width="@dimen/x200"
                android:layout_height="@dimen/y25"
                android:background="@drawable/button_result_save"
                android:text="@string/result_save"
                android:textColor="@color/white"
                android:textSize="@dimen/x18" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/activity_search_ll_save">

            <com.jcodecraeer.xrecyclerview.XRecyclerView
                android:id="@+id/activity_search_rv_student"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

            <TextView
                android:id="@+id/activity_search_tv_student_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/user_student_empty"
                android:textColor="@color/gray"
                android:textSize="@dimen/x18" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>