<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/y3">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/y40"
        android:background="@color/title"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/x25"
            android:layout_height="@dimen/x25"
            android:scaleType="fitXY"
            android:src="@mipmap/user_info" />

        <TextView
            android:id="@+id/activity_user_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x10"
            android:text="个人信息"
            android:textColor="@color/white"
            android:textSize="@dimen/x18" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:layout_alignParentBottom="true"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/y80"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/x20"
                android:layout_weight="1.0"
                android:gravity="right"
                android:text="@string/user_name"
                android:textSize="@dimen/x14" />

            <TextView
                android:id="@+id/activity_user_tv_username"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                android:text="庐阳区"
                android:textColor="@color/title"
                android:textSize="@dimen/x14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/x20"
                android:layout_weight="1.0"
                android:gravity="right"
                android:text="@string/user_role"
                android:textSize="@dimen/x14" />

            <TextView
                android:id="@+id/activity_user_tv_role"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                android:text="管理员"
                android:textColor="@color/title"
                android:textSize="@dimen/x14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/x20"
                android:layout_weight="1.0"
                android:gravity="right"
                android:text="@string/user_last_login"
                android:textSize="@dimen/x14" />

            <TextView
                android:id="@+id/activity_user_tv_login_time"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                android:text="2017-2-20"
                android:textColor="@color/title"
                android:textSize="@dimen/x14" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:layout_alignParentBottom="true"
        android:background="@color/line" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/y25"
        android:background="@color/title">

        <TextView
            android:id="@+id/activity_user_tv_school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/school"
            android:textColor="@color/white"
            android:textSize="@dimen/x16" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/activity_user_rv_schools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <TextView
            android:id="@+id/activity_user_tv_school_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/user_school_empty"
            android:textColor="@color/gray"
            android:textSize="@dimen/x18" />
    </RelativeLayout>
</LinearLayout>